# kokoro

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROBLEM.md  README.md
.github/workflows/: rust.yml
examples/: synth_directly_v10.rs  synth_stream.rs
src/: g2p.rs  lib.rs  pipeline.rs  stream.rs  synthesizer.rs  text_split.rs  tokenizer.rs  transcription.rs  voice.rs
src/g2p/: backend.rs  capability.rs  embedded_g2p_oov.tab  espeak_cli.rs  lexicon.rs  phonemize_js.rs
src/transcription/: en.rs
