[package]
name = "kokoro-en"
description = "A lightweight, offline Rust inference library for Kokoro TTS - an 82M-parameter open-weights text-to-speech model. "
version = "0.1.3"
edition = "2024"
keywords = ["TTS", "Offline", "Lite", "AI", "Synthesizer"]
license = "Apache-2.0"
repository = "https://github.com/pguso/kokoro.git"
readme = "README.md"

[dependencies]
bincode = "2.0"
cmudict-fast = "0.8.0"
futures = "0.3.31"
log = "0.4.29"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", features = ["coreml", "cuda"] }
pin-project = "1.1.10"
regex = "1.12.2"
tokio = { version = "1.49.0",features = ["fs", "rt-multi-thread","time", "sync"] }
voice-g2p = "0.2.2"

[dev-dependencies]
anyhow = "1.0.100"
tokio = {version = "1.49.0",features = ["macros"]}
voxudio = { version = "0.5.7",features = ["device"] }

[build-dependencies]
cc = "1.2.53"
